tests/Rules/Aria/Fixtures/valid/menu_with_items.html.twig
<div role="menu">
  <div role="menuitem">Item</div>
</div>
