tests/Rules/Aria/Fixtures/invalid/role_invalid.html.twig
{# 1 errors #}
<div role="marquee">Bad</div>
